force-app/main/default/objects/Scorecard_Answer__c/Scorecard_Answer__c.object-meta.xml
<CustomObject>
    <label>Scorecard Answer</label>
    <nameField>
        <displayFormat>SCA-{000000}</displayFormat>
        <label>Scorecard Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>