force-app/main/default/objects/Scorecard_Answer__c/fields/Answer_PL__c.field-meta.xml
<CustomField>
    <fullName>Answer_PL__c</fullName>
    <label>Answer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>