force-app/main/default/objects/Scorecard_Answer__c/fields/Answer_Value__c.field-meta.xml
<CustomField>
    <fullName>Answer_Value__c</fullName>
    <label>Answer Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>