force-app/main/default/objects/Scorecard_Answer__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Scorecard Answers</relationshipLabel>
    <relationshipName>Scorecard_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>