force-app/main/default/objects/Scorecard_Answer__c/fields/Point_Value__c.field-meta.xml
<CustomField>
    <fullName>Point_Value__c</fullName>
    <label>Point Value</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>