force-app/main/default/objects/Scorecard_Answer__c/fields/PointStyle__c.field-meta.xml
<CustomField>
    <fullName>PointStyle__c</fullName>
    <formula>IF ( Point_Value__c&gt;0, &quot;tc:rgb(52,235,73)&quot;, IF ( Point_Value__c&lt;0, 
&quot;tc:rgb(235,52,52)&quot;, &quot;tc:rgb(0,0,0)&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PointStyle</label>
    <type>Text</type>
</CustomField>