force-app/main/default/objects/Scorecard_Answer__c/fields/Possible_Point_Value__c.field-meta.xml
<CustomField>
    <fullName>Possible_Point_Value__c</fullName>
    <label>Possible Point Value</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>