force-app/main/default/objects/Scorecard_Answer__c/fields/Question_Comments__c.field-meta.xml
<CustomField>
    <fullName>Question_Comments__c</fullName>
    <label>Question Comments</label>
    <type>TextArea</type>
</CustomField>