force-app/main/default/objects/Scorecard_Answer__c/fields/Scorecard_Question__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scorecard Question</label>
    <referenceTo>Scorecard_Questions__c</referenceTo>
    <relationshipLabel>Scorecard Answers</relationshipLabel>
    <relationshipName>Scorecard_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>