force-app/main/default/objects/Scorecard_Answer__c/fields/ScoreStyle__c.field-meta.xml
<CustomField>
    <fullName>ScoreStyle__c</fullName>
    <formula>IF ( ISPICKVAL(Answer_PL__c, &quot;True&quot;), &quot;tc:rgb(52,235,73)&quot;, IF ( ISPICKVAL(Answer_PL__c, &quot;False&quot;), 
&quot;tc:rgb(235,52,52)&quot;, &quot;tc:rgb(0,0,0)&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ScoreStyle</label>
    <type>Text</type>
</CustomField>